# sports-celeb-img-clf

./: pyproject.toml
model/: class_dict.json  data_cleaning.ipynb  model.ipynb  pipeline_parameters.json
server/: b64.txt  server.py  util.py  wavelet.py
server/artifacts/: model.pkl
ui/: app.html  app.js
