[tool.poetry]
name = "sports-celeb-img-clf"
version = "0.1.0"
description = ""
authors = ["nshian <ianng800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
seaborn = "^0.13.2"
pywavelets = "^1.5.0"
scikit-learn = "^1.4.1.post1"
lazypredict = "^0.2.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
